# Cyber_LLM

./: DOCUMENTATION.md  Dockerfile.backend  Dockerfile.frontend  HOW_TO_RUN.md  MASTER_MANUAL.md  PROJECT_OVERVIEW.md  QUICKSTART.md  USAGE.md  artemis.py  autogen_compat.py  cyberllm_memory.db  dashboard.py  docker-compose.yml  interactive_session.py  jarvis.py  main.py  pyproject.toml  readme.md  requirements.txt  run.ps1  run_agents.py  run_framework.ps1  run_framework.py  start_mission_control.ps1
agents/: caldera_agents.py  code_agents.py  coordinator_agents.py  intelligence_agents.py
api/: app.py
cti_cache/: cve_CVE-2024-1234.json
cyberllm/: __init__.py  interactive_session.py  main.py
cyberllm/agents/: code_agents.py  coordinator_agents.py  text_agents.py
cyberllm/core/: __init__.py  agent.py  cti.py  intent.py  jarvis.py  memory.py  osint.py  pentest.py  scanner.py  training.py
cyberllm/engine/: decision_engine.py  intent_classifier.py  jarvis_controller.py  memory_store.py  scenario_engine.py
cyberllm/scenarios/: advanced_scenarios.py  definitions.py  threat_hunt.py
cyberllm/tools/: caldera_tools.py  code_tools.py  memory_tools.py  web_tools.py
engine/: intent_classifier.py  jarvis_controller.py  normalization.py  risk_engine.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: MissionControl.tsx  TerminalLog.tsx
notebooks/: RSA 2024 - Demos - Destroyer of Endpoints.ipynb
services/: agent_runner.py
tools/: scraper_tool.py  security_tools.py  security_tools_advanced.py
utils/: constants.py  shared_config.py
