[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberllm"
version = "1.0.0"
description = "CyberLLM - Autonomous Cybersecurity AI Agent with JARVIS Assistant"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "CyberLLM Team" }
]
dependencies = [
    "openai",
    "langchain-openai",
    "langchain-experimental",
    "tiktoken",
    "pyautogen>=0.2.27",
    "pandas",
    "fastapi",
    "uvicorn",
    "requests",
    "beautifulsoup4",
    "python-dotenv",
]

[project.scripts]
cyberllm = "cyberllm.main:main"

[tool.setuptools.packages.find]
include = ["cyberllm*"]

[project.urls]
Homepage = "https://github.com/cyberllm/cyber-security-llm-agents"
Repository = "https://github.com/cyberllm/cyber-security-llm-agents"
