[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberllm"
version = "1.0.0"
description = "CyberLLM - Autonomous Cybersecurity AI Agent with JARVIS Assistant"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "DK CHAUHAN", email = "contact@cyberllm.io"}
]
keywords = ["security", "cybersecurity", "ai", "jarvis", "threat-hunting", "osint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "openai",
    "langchain-openai",
    "langchain-experimental",
    "tiktoken",
    "pyautogen>=0.2.27",
    "pandas",
    "fastapi",
    "uvicorn",
    "requests",
    "beautifulsoup4",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
cyberllm = "cyberllm.main:main"

[project.urls]
Homepage = "https://github.com/cyberllm/cyber-security-llm-agents"
Repository = "https://github.com/cyberllm/cyber-security-llm-agents"
Issues = "https://github.com/cyberllm/cyber-security-llm-agents/issues"

[tool.setuptools.packages.find]
include = ["cyberllm*"]
